add default sans-serif font

--- a/Assets/default.css
+++ b/Assets/default.css
@@ -1,1 +1,4 @@
-body {background-color: rgb(255, 255, 255);}
+body {background-color: #FAFAFA;
+    font-family: Helvetica, Sans-Serif;
+    color: #000000;
+}
